# hansolo_toy_core

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  hansolocore.cc  hansolotopic.cc  setup.bash  test_compression.cc  test_image.cc  test_image_receive.cc  test_image_receive2.cc  test_new_node.cc  test_new_node1.cc  test_new_node2.cc
include/: colormod.h  hansolo_master_new.h  hansolo_node_new.h  hansolo_publisher.h  hansolo_std_msg.h  hansolo_tcp.h  hansolo_tcp_thread.h
include/core/: hansolo_master_new.h  hansolo_node_new.h  hansolo_publisher.h  hansolo_subscriber.h
include/msg/: data_compression.h  hansolo_image_msg.h  hansolo_msg_base.h  hansolo_std_msg.h  hansolo_time.h
include/tcp/: hansolo_tcp.h  hansolo_tcp_thread.h  wrap.h
include/tools/: colormod.h  hansolo_topic.h  image_tools.h  msg_type_map.h
msgs/: baseMsg.proto  coreConnection.proto  hansoloTime.proto1  imageMsg.proto  protoGen.cmake  stdMsg.proto
scripts/: genMsgCpp.py  msg_type_map.h
src/: hansolo_master_new.cc  hansolo_node_new.cc  hansolo_publisher.cc  hansolo_subscriber.cc  hansolo_tcp.cc  hansolo_tcp_thread.cc  wrap.cc
src/core/: hansolo_master_new.cc  hansolo_node_new.cc  hansolo_publisher.cc  hansolo_subscriber.cc
src/tcp/: hansolo_tcp.cc  hansolo_tcp_thread.cc  wrap.cc
src/tools/: hansolo_topic.cc  image_tools.cc
test/: CMakeLists.txt  test.cc
